[feat] contents 수정

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,9 +2,11 @@
 # BACKTEST | PAPER | LIVE
 MODE=PAPER
 
-# ── Bithumb API ──
+# ── Private API (실거래/테스트 주문) — 빗썸 ──
+BITHUMB_BASE_URL=https://api.bithumb.com
 BITHUMB_ACCESS_KEY=your_access_key_here
 BITHUMB_SECRET_KEY=your_secret_key_here
+# 401 jwt_verification 시: Secret을 문자열 그대로 쓰려면 BITHUMB_SECRET_RAW=true
 
 # ── Risk ──
 RISK_PER_TRADE_PCT=0.01
@@ -30,8 +32,32 @@ MAX_RETRIES=3
 # 주문 전 현재가 검증: 캔들 종가와 티커 가격 차이(%) 초과 시 진입 스킵 (0.5 = 0.5%)
 MAX_PRICE_DRIFT_PCT=0.5
 
-# ── Capital ──
+# ── Capital (전략별 배분 비율 합 1.0) ──
 INITIAL_CAPITAL_KRW=10000000
+MAX_ALLOCATION_DONCHIAN=0.5
+MAX_ALLOCATION_DCA=0.3
+MAX_ALLOCATION_RSI_FEAR=0.2
+
+# ── 전략 A: 장기 DCA ──
+DCA_MONTHLY_DAY=1
+DCA_WEEKLY_DAY=-1
+DCA_MONTHLY_AMOUNT_KRW=100000
+DCA_DIP_BUY_KRW=50000
+DCA_DIP_THRESHOLD_PCT=15
+DCA_DIP_COOLDOWN_DAYS=7
+DCA_HIGH_LOOKBACK_DAYS=30
+
+# ── 전략 B: RSI + 공포지수 ──
+RSI_PERIOD=14
+RSI_OVERSOLD=30
+RSI_OVERBOUGHT=70
+FEAR_MAX=20
+RSI_ENTRY_SPLITS=3
+RSI_OVERHEAT_RISE_PCT=5
+RSI_OVERHEAT_BARS=10
+RSI_STOP_LOSS_PCT=3
+RSI_TRAILING_ATR_MULT=2.0
+FEAR_GREED_CACHE_MINUTES=60
 
 # ── Paper → Live Promotion ──
 PAPER_MIN_DAYS=14
