--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "better-sqlite3": "^11.0.0",
     "dotenv": "^16.4.0",
     "jose": "^5.9.0",
+    "node-cron": "^4.2.1",
     "pino": "^9.0.0",
     "undici": "^7.0.0",
     "ws": "^8.16.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20.11.0",
+    "@types/node-cron": "^3.0.11",
     "@types/ws": "^8.5.10",
     "tsx": "^4.7.0",
     "typescript": "^5.4.0",
